@@ -2,7 +2,9 @@ package com.example.franck.myapplication;
 
 import android.animation.Animator;
 import android.animation.ValueAnimator;
+import android.content.Intent;
 import android.graphics.Typeface;
+import android.os.AsyncTask;
 import android.os.CountDownTimer;
 import android.os.Handler;
 import android.support.v7.app.AppCompatActivity;
@@ -13,16 +15,27 @@ import android.view.animation.Animation;
 import android.widget.Button;
 import android.widget.TextView;
 
+import com.github.mikephil.charting.charts.BarChart;
+import com.github.mikephil.charting.data.BarData;
+import com.github.mikephil.charting.data.BarDataSet;
+import com.github.mikephil.charting.data.BarEntry;
+
+import org.web3j.crypto.Credentials;
+import org.web3j.protocol.Web3j;
+import org.web3j.protocol.Web3jFactory;
+import org.web3j.protocol.http.HttpService;
+import org.web3j.tx.ManagedTransaction;
+
+import java.math.BigInteger;
+import java.util.ArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
 
 public class MainActivity extends AppCompatActivity {
-    private TextView textViewRashod;
-    private TextView textViewPotreb;
-    private ValueAnimator valueAnimator;
-    private CountDownTimer timer;
-    private Button sell;
-    private Button buy;
+    private Button aBut;
+    private Button bBut;
+    private Button addButton;
+    private Button nextApp;
 
     @Override
     protected void onCreate(Bundle savedInstanceState) {
@@ -30,108 +43,75 @@ public class MainActivity extends AppCompatActivity {
                 "fonts/1374.ttf");
         super.onCreate(savedInstanceState);
         setContentView(R.layout.activity_main);
-        textViewRashod = findViewById(R.id.rashod_text);
-        textViewPotreb = findViewById(R.id.potreb_text);
-        sell = findViewById(R.id.sell);
-        buy = findViewById(R.id.buy);
-        textViewRashod.setTypeface(tf);
-        textViewPotreb.setTypeface(tf);
-        animateTextView(0, 1000, textViewPotreb);
+        aBut = findViewById(R.id.aBut);
+        bBut = findViewById(R.id.bBut);
+        addButton = findViewById(R.id.addMoney);
+        nextApp = findViewById(R.id.next);
 
-
-        sell.setOnClickListener(new View.OnClickListener() {
+        aBut.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                Integer dif = (new Integer(textViewRashod.getText().toString()) - new Integer(textViewPotreb.getText().toString())) / 2;
-                animateTextView(new Integer(textViewPotreb.getText().toString()), new Integer(textViewPotreb.getText().toString()) + dif,textViewPotreb);
-                animateTextView(new Integer(textViewRashod.getText().toString()), new Integer(textViewRashod.getText().toString()) - dif,textViewRashod);
+                Intent intent = new Intent(MainActivity.this, Activity.class);
+                startActivity(intent);
             }
         });
 
-        buy.setOnClickListener(new View.OnClickListener() {
+        bBut.setOnClickListener(new View.OnClickListener() {
             @Override
             public void onClick(View v) {
-                Integer dif = Math.abs((new Integer(textViewRashod.getText().toString()) - new Integer(textViewPotreb.getText().toString())) / 2);
-                animateTextView(new Integer(textViewPotreb.getText().toString()), new Integer(textViewPotreb.getText().toString()) - dif,textViewPotreb);
-                animateTextView(new Integer(textViewRashod.getText().toString()), new Integer(textViewRashod.getText().toString()) + dif,textViewRashod);
+                Intent intent = new Intent(MainActivity.this, Bactivity.class);
+                startActivity(intent);
+            }
+        });
+
+        addButton.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                new MyTask().execute();
+            }
+        });
+
+        nextApp.setOnClickListener(new View.OnClickListener() {
+            @Override
+            public void onClick(View v) {
+                Intent intent = new Intent(MainActivity.this, Main2Activity.class);
+                startActivity(intent);
             }
         });
     }
 
-    public void animateTextView(int initialValue, int finalValue, final TextView  textview) {
-        ValueAnimator valueAnimator = ValueAnimator.ofInt(initialValue, finalValue);
-        valueAnimator.setDuration(1000);
-        valueAnimator.addUpdateListener(new ValueAnimator.AnimatorUpdateListener() {
-            @Override
-            public void onAnimationUpdate(ValueAnimator valueAnimator) {
-                textview.setText(valueAnimator.getAnimatedValue().toString());
-            }
-        });
-        valueAnimator.addListener(new ValueAnimator.AnimatorListener() {
+    class MyTask extends AsyncTask<String, Boolean, Boolean> {
 
-            @Override
-            public void onAnimationStart(Animator animation) {
-
-            }
-
-            @Override
-            public void onAnimationEnd(Animator animation) {
-                changeColor();
-                changeButton();
-            }
-
-            @Override
-            public void onAnimationCancel(Animator animation) {
-
-            }
-
-            @Override
-            public void onAnimationRepeat(Animator animation) {
-
-            }
-        });
-        valueAnimator.start();
-
-
-    }
-
-
-
-    public void changeColor() {
-        if (new Integer(textViewPotreb.getText().toString()) - 1 == new Integer(textViewRashod.getText().toString()) || new Integer(textViewPotreb.getText().toString()) + 1 == new Integer(textViewRashod.getText().toString())) {
-            textViewPotreb.setTextColor(getResources().getColor(R.color.colorPrimary));
-            textViewRashod.setTextColor(getResources().getColor(R.color.colorPrimary));
-            return;
+        @Override
+        protected void onPreExecute() {
+            super.onPreExecute();
         }
-        if (new Integer(textViewPotreb.getText().toString()) > new Integer(textViewRashod.getText().toString())) {
-            textViewPotreb.setTextColor(getResources().getColor(R.color.green));
-            textViewRashod.setTextColor(getResources().getColor(R.color.red));
+
+        @Override
+        protected void onPostExecute(Boolean status) {
+            super.onPostExecute(status);
         }
-        if ((new Integer(textViewPotreb.getText().toString()) < new Integer(textViewRashod.getText().toString()))){
-            textViewPotreb.setTextColor(getResources().getColor(R.color.red));
-            textViewRashod.setTextColor(getResources().getColor(R.color.green));
+
+        @Override
+        protected Boolean doInBackground(String... params) {
+            Boolean status = false;
+            try {
+                Web3j web3j = Web3jFactory.build(new HttpService("https://rinkeby.infura.io/1p6X1Vby9WW11tNcTTg0"));
+                BigInteger _price = BigInteger.ONE;
+                _price = BigInteger.valueOf(1000);
+
+                BigInteger _gas_price = BigInteger.ONE;
+                _price = BigInteger.valueOf(1);
+                Credentials credentials1 = Credentials.create("f2f0a150bfad5f46760f20c3ef54dcdf5833e02813e6ec6485d2cdc237bd5dd6");
+                Exchange exchange = Exchange.load("0x68635c728c839032a0c30f12cc67eb17093ee310",web3j,credentials1, ManagedTransaction.GAS_PRICE,Exchange.GAS_LIMIT);
+                exchange.AddDeposit(_price, _gas_price);
+
+            } catch (Exception e) {
+                e.printStackTrace();
+            }
+            return status;
         }
     }
 
-    public void changeButton() {
-        if (new Integer(textViewPotreb.getText().toString()) - 1 == new Integer(textViewRashod.getText().toString()) || new Integer(textViewPotreb.getText().toString()) + 1 == new Integer(textViewRashod.getText().toString())){
-            sell.setEnabled(true);
-            buy.setEnabled(true);
-            return;
-        }
-        if (new Integer(textViewPotreb.getText().toString()) > new Integer(textViewRashod.getText().toString())) {
-           sell.setEnabled(false);
-           buy.setEnabled(true);
-        }
-        if (new Integer(textViewPotreb.getText().toString()) < new Integer(textViewRashod.getText().toString())){
-            sell.setEnabled(true);
-            buy.setEnabled(false);
-        }
-    }
-
-    @Override
-    protected void onResume() {
-        super.onResume();
-    }
 
 }
